# kademlia

./: .gitignore  LICENSE  Makefile  README.md  heatmap.html  log.txt  main.py  plot.py  pyproject.toml  setup.cfg  setup.py  test.tmp
data/: bitcoin_nodes.csv  fetch_locations.sh
src/chord/: net_manager.py  node.py
src/common/: client.py  collector.py  net_manager.py  node.py  packet.py  rbg.py  simulator.py  utils.py
src/kad/: net_manager.py  node.py  rbg.py  simulator.py  utils.py
src/plot/: Home.py  data.py  healthy.py  options.py  plot.py  plot_healthy_nodes.py  plot_old.py  plotter.py
src/plot/pages/: 1_Normal_behavior.py  2_No_churn.py  3_High_churn.py  4_Stresstest.py  Latency.py  Load.py
src/simulation/: campaigns.py  constants.py  main.py  run.py  simulator.py
tests/: conftest.py
tests/chord/: test_node.py
tests/common/: test_node.py
tests/kad/: test_node.py
