[project]
name = "kad-simulator"
version = "0.0.1"
description = "Kademlia simulator"
# authors = [
#     "Gabriele Masina",
#     "Giovanni Zotta",
# ]
readme = "README.md"
# python = "^3.8"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"


[tool.isort]
profile = "black"

[tool.black]
line-lenght = 88

[tool.pyright]
